RESOLVED FIXED130810
Assertion failure in RemoteLayerBackingStore::flush
https://bugs.webkit.org/show_bug.cgi?id=130810
Summary Assertion failure in RemoteLayerBackingStore::flush
Tim Horton
Reported 2014-03-26 18:35:10 PDT
We don't always have backing store to flush, if platformCALayerDrawsContent() is false. We also can't assert that we have a back surface, because the very first paint will not. <rdar://problem/16439276>
Attachments
patch (2.07 KB, patch)
2014-03-26 18:37 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-03-26 18:37:29 PDT
Created attachment 227906 [details] patch needs testing before landing, though (waiting for debug build)
Tim Horton
Comment 2 2014-03-26 18:49:04 PDT
Note You need to log in before you can comment on or make changes to this bug.