Assertion failure in RemoteLayerBackingStore::flush https://bugs.webkit.org/show_bug.cgi?id=130810 <rdar://problem/16439276>

Reviewed by Simon Fraser.

* Shared/mac/RemoteLayerBackingStore.mm:
(RemoteLayerBackingStore::flush):
We don't always have backing store to flush, if platformCALayerDrawsContent() is false.
We also can't assert that we have a back surface, because the very first paint will not.


Canonical link: https://commits.webkit.org/148848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166331 268f45cc-cd09-0410-ab3c-d52691b4dbfc